--- a/main.html
+++ b/main.html
@@ -9,6 +9,6 @@
     <p>هذا موقعي الأول على GitHub!</p>
     
     <!-- إضافة صورة -->
-    <img src="images/1.jpeg" alt="وصف الصورة">
+    <img src="1.jpeg" alt="وصف الصورة">
 </body>
 </html>
